# art-with-math

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  clean  clean.sh  cppcheck  main.cpp  make.sh  out.avi  project.cppcheck
algorithms/: Algo.cpp  Generator.cpp  Grid.cpp  cv.cpp  generate.cpp  grid.cpp
dataclass/: Array.cpp  Data.cpp  Point.cpp
imgtools/: imgtools.cpp
includes/: defines.hpp  includes.hpp  opencv_includes.hpp  system_includes.hpp  user_includes.hpp
outputs/: out.avi
src/: main.cpp
src/algorithms/: Algo.cpp  Generator.cpp  cv.cpp  point.cpp
src/data/: Array.cpp  Math.cpp  Point.cpp
src/includes/: includes.hpp  user_includes.hpp
